--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav {
         right: -100%;
         top: 0;
         flex-direction: column;
-        background: white;
+        background: #ffa8d3;  /* Pink background like your header */
         width: 100%;
         height: 100vh;
         justify-content: center;
